Mon Jun  6 14:35:48 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rdoc/test_rdoc_markup_pre_process.rb (TestRDocMarkupPreProcess#
	  {test_include_file,test_include_file_encoding_incompatible}): no
	  need to write such workaround.  don't hide the bug of ruby (and the
	  bug is already fixed)

Mon Jun  6 14:11:11 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/date/date_core.c (valid_jd_sub): need to convert from VALUE to
	  double.

	* ext/date/date_core.c (offset_to_sec): get rid of a compiler warning.

Mon Jun  6 14:09:08 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/defines.h (rb_inifinity, rb_nan): export for Windows.

Mon Jun  6 10:54:45 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb(Test::Unit::Runner#puke):
	  Add overriding from MiniTest::Unit#puke. This reverts minitest's fix
	  that skip messages are hidden when not verbose mode (-v option).
	  To hide skip messages, use --hide-skip option instead.

Mon Jun  6 10:52:13 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb: don't use autoload.

Mon Jun  6 09:39:43 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): release event objects to plug memory
	leak.  Thanks Mark J. Titorenko!

Sun Jun  5 23:26:15 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* eval.c: remove rb_thread_stop_timer_thread function declaration.
	  Instead, include vm_core.h.
	* process.c: ditto.

Sun Jun  5 21:38:51 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (thread_timer): add to care a spurious wakeup.
	  When native_cond_timedwait() return 0 by spurious wakeup, we
	  don't have to neither 1) call timer_thread_function and 2)
	  exit the timer thread.

Sun Jun  5 17:50:01 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (m_real_cwyear): new.  derived from m_cwyear.
	* ext/date/date_strftime.c: trivial changes.

Sun Jun  5 17:22:01 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
