@@ -133,22 +133,6 @@ void xfree(void*);
 #define PRIxBDIGIT_DBL PRI_BDIGIT_DBL_PREFIX"x"
 #define PRIXBDIGIT_DBL PRI_BDIGIT_DBL_PREFIX"X"
 
-#ifdef INFINITY
-# define HAVE_INFINITY
-#else
-/** @internal */
-RUBY_EXTERN const unsigned char rb_infinity[];
-# define INFINITY (*(float *)rb_infinity)
-#endif
-
-#ifdef NAN
-# define HAVE_NAN
-#else
-/** @internal */
-RUBY_EXTERN const unsigned char rb_nan[];
-# define NAN (*(float *)rb_nan)
-#endif
-
 #ifdef __CYGWIN__
 #undef _WIN32
 #endif
