@@ -1,9 +1,14 @@
+Mon Jun  6 15:10:17 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/{defines,missing}.h (rb_infinity, rb_nan): move from
+	  defines.h to missing.h.  (couldn't use RUBY_EXTERN there.)
+
 Mon Jun  6 14:35:48 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/rdoc/test_rdoc_markup_pre_process.rb (TestRDocMarkupPreProcess#
 	  {test_include_file,test_include_file_encoding_incompatible}): no
-	  need to write such workaround.  don't hide the bug of ruby (and the
-	  bug is already fixed)
+	  need to write such workaround.  don't hide the bug of ruby. (and the
+	  bug is already fixed.)
 
 Mon Jun  6 14:11:11 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
